# mattermost-music-library

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  logging_config.py  main.py
app/api/: __init__.py  dashboard.py  deps.py  jobs.py  listening.py  router.py  tracks.py
app/downloader/: __init__.py  progress.py  ytdlp.py
app/jobs/: __init__.py  pipeline.py  queue.py  recovery.py
app/matching/: __init__.py  dedup.py  scorer.py  searcher.py
app/mattermost/: __init__.py  client.py  commands.py  formatter.py  listener.py
app/models/: __init__.py  base.py  candidate.py  comment.py  device_token.py  job.py  play_event.py  track.py  user_setting.py
app/notifications/: __init__.py  fcm.py
app/resolvers/: __init__.py  apple_music.py  base.py  musicbrainz.py  playlist.py  registry.py  spotify.py  youtube.py
app/schemas/: __init__.py  candidate.py  job.py  track.py
app/security/: __init__.py  auth.py  redaction.py  validation.py
app/static/dashboard/: index.html
docker/: entrypoint.sh
tests/: conftest.py  test_api.py  test_config.py  test_downloader.py  test_jobs.py  test_library.py  test_matching.py  test_mattermost.py  test_models.py  test_resolvers.py  test_security.py
whatsapp/: .env.example  Dockerfile  package-lock.json  package.json
whatsapp/src/: config.ts  index.ts
whatsapp/src/database/: client.ts  migrations.ts  models.ts
whatsapp/src/linking/: commands.ts  service.ts
(+8 files in other folders)
